@@ -11,6 +11,9 @@ IN DEVELOPMENT
       empty value. And when the value is not ASCII.
       (John Arbash Meinel, #109613)
 
+    * ``WorkingTree4._iter_changes`` should not descend into unversioned
+      directories. (John Arbash Meinel, #110399)
+
 
 bzr 0.16rc1  2007-04-26
 
